Fix checkbox border radius in Safari on iOS

--- a/style.css
+++ b/style.css
@@ -574,6 +574,7 @@ input[type="radio"] {
     width: 16px;
     height: 16px;
     border: 2px solid;
+    border-radius: 0;
     cursor: pointer;
     appearance: none;
 }
